spacing fix

--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -311,7 +311,7 @@ input[type="submit"]:hover {
 .poodle {
   width: 27%;
   position: relative;
-  left: -88%;
+  left: -96%;
   padding-top: 11%;
 }
 
